[gd_scene load_steps=6 format=3 uid="uid://gxhrf1cwptdn"]

[ext_resource type="Script" path="res://scenes/Cards/Card.gd" id="1_vltva"]
[ext_resource type="Texture2D" uid="uid://dls1c37oq5nkl" path="res://assets/Cards/Card.png" id="2_tlbps"]
[ext_resource type="Texture2D" uid="uid://di24al05mb8dh" path="res://assets/Cards/pig.jpg" id="4_afnht"]

[sub_resource type="FontFile" id="FontFile_tkfaq"]
msdf_pixel_range = 8
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5r046"]
size = Vector2(144, 212)

[node name="Card" type="Node2D"]
script = ExtResource("1_vltva")

[node name="CardFrame" type="Sprite2D" parent="."]
texture = ExtResource("2_tlbps")

[node name="CardName" type="RichTextLabel" parent="CardFrame"]
offset_left = -57.0
offset_top = -95.0
offset_right = 61.0
offset_bottom = -76.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontFile_tkfaq")
theme_override_font_sizes/normal_font_size = 16

[node name="CardImage" type="Sprite2D" parent="CardFrame"]
position = Vector2(-2.62502, -39.375)
scale = Vector2(0.10335, 0.105801)
texture = ExtResource("4_afnht")

[node name="CardText" type="RichTextLabel" parent="CardFrame"]
offset_left = -57.0
offset_top = 6.0
offset_right = 56.0
offset_bottom = 90.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "I'm a test card description! 

Look at how wordy I am!"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5r046")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
